# ai-gateway

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEVELOPMENT.md  Dockerfile  README.md  SIDECAR.md  mise.toml
ai-gateway/: Cargo.toml
ai-gateway/config/: decision-example.yaml  emulated.yaml  local.yaml  sidecar.yaml
ai-gateway/config/embedded/: credentials.yaml  model-mapping.yaml  provider-ladders.yaml  provider-limits.yaml  providers.yaml
ai-gateway/src/: app.rs  app_state.rs  declared_models.rs  lib.rs  main.rs
ai-gateway/src/app/: cache.rs  factory.rs  helicone_init.rs  mod.rs  run.rs  service.rs  stack.rs  startup_tasks.rs  state.rs
ai-gateway/src/app/decision_state/: mod.rs  store.rs  validate.rs
ai-gateway/src/cli/: banner.rs  chatgpt_login.rs  decision_display.rs  deepseek_login.rs  helpers.rs  mod.rs  perplexity_login.rs  provider_order.rs  router_summary.rs
ai-gateway/src/client_access/: loader.rs  mod.rs  reload.rs  snapshot.rs
ai-gateway/src/client_access/quota/: clock.rs  memory.rs  mod.rs  redis.rs  store.rs
ai-gateway/src/config/: balance.rs  cache.rs  catalog_limit_resolve.rs  chatgpt_web.rs  client_access.rs  cloudflare.rs  control_plane.rs  cost_class.rs  credential_env.rs  credentials.rs  database.rs  decision.rs  deepseek_web.rs  deployment_target.rs  dev_overrides.rs  discover.rs  dispatcher.rs  mod.rs  model_capability.rs  model_ladder.rs  model_mapping.rs  monitor.rs  observability.rs  perplexity_web.rs  provider_limits.rs  provider_model_spec.rs  providers.rs  rate_limit.rs  read.rs  router.rs  router_cooldown.rs  secrets_file.rs  test_default.rs  tests.rs  types.rs  validate.rs  validation.rs
ai-gateway/src/config/helicone/: deserialize.rs  mod.rs  tests.rs
ai-gateway/src/control_plane/: types.rs
ai-gateway/src/discover/model/: weighted_key.rs
ai-gateway/src/discover/provider/: weighted_key.rs
ai-gateway/src/discover/router/: cloud.rs
ai-gateway/src/dispatcher/: chatgpt_web.rs  cloudflare_url.rs  deepseek_web.rs  mod.rs  openai_compatible_client.rs  service.rs
ai-gateway/src/dispatcher/client/: auth.rs  factory.rs  metrics.rs  mod.rs  stream.rs
ai-gateway/src/dispatcher/service/: dispatch.rs  dispatch_stream.rs  dispatch_sync.rs  factory.rs  logging.rs  mod.rs  outcome.rs  retry.rs  utils.rs
ai-gateway/src/emulated/: mod.rs  upstream.rs
ai-gateway/src/endpoints/: mod.rs
ai-gateway/src/endpoints/bedrock/: converse.rs
ai-gateway/src/endpoints/google/: generate_contents.rs
ai-gateway/src/endpoints/ollama/: chat_completions.rs
ai-gateway/src/endpoints/openai/: chat_completions.rs  mod.rs
ai-gateway/src/endpoints/openrouter/: chat_completions.rs  mod.rs
ai-gateway/src/error/: auth.rs  init.rs  internal.rs  invalid_req.rs  mapper.rs
ai-gateway/src/logger/: service.rs
ai-gateway/src/metrics/: attribute_extractor.rs  llm.rs  mod.rs  request_count.rs  rolling_counter.rs
ai-gateway/src/metrics/provider/: attempt.rs  dispatch.rs  mod.rs  quota_observability.rs  recorder.rs  reservoir.rs  runtime.rs  usage_json.rs
ai-gateway/src/metrics/router/: attrs.rs  events.rs  layer.rs  mod.rs  strategy_name.rs  (+1 more)
ai-gateway/src/middleware/: add_extension.rs  auth.rs  client_access_quota.rs  mod.rs  response_headers.rs
ai-gateway/src/router/: budget_aware.rs  failover.rs  managed.rs  meta.rs  mod.rs  provider_attempt.rs  routed_identity.rs  router_details.rs  service.rs  strategy.rs  unified_api.rs  upstream_failure.rs
ai-gateway/src/routing_load/: assert_identity.rs  assert_stats.rs  mod.rs  payload.rs  responses.rs  router.rs
ai-gateway/src/store/: minio.rs
ai-gateway/src/tests/: budget_aware.rs  harness.rs  mod.rs  routing.rs
ai-gateway/src/types/: body.rs  extensions.rs  provider.rs
ai-gateway/src/utils/: handle_error.rs  health_check.rs  meltdown.rs
ai-gateway/tests/: budget_aware_memory.rs  budget_aware_plan.rs  budget_aware_snapshot.rs  cache.rs  caller_context.rs  credential_health_registry.rs  direct_proxy.rs  health_check.rs  load_balance.rs  provider_observability.rs  quota_admission.rs  rate_limit.rs  rate_limit_combinations.rs  rate_limit_monitor.rs  redis_cache.rs  redis_rate_limit_combinations.rs  replay_record.rs  router_metrics.rs  routing_load.rs  single_provider.rs  unified_api.rs  verify_gemini_catalog.rs  verify_llm7_catalog.rs  verify_openrouter_catalog.rs  weighted_balance.rs
ai-gateway/tests/fixtures/: gemini-listmodels.json  llm7-listmodels.json  openrouter-listmodels.json
ai-gateway/tests/rl/: helpers.rs  mod.rs  support.rs
crates/chatgpt-web/: Cargo.toml
crates/chatgpt-web/examples/: list_models.rs
crates/chatgpt-web/src/: constants.rs  errors.rs  executor.rs  headers.rs  lib.rs  login.rs  model_config.rs  models.rs  schema.rs
crates/deepseek-web/: Cargo.toml
crates/deepseek-web/src/: biz_error.rs  completion.rs  constants.rs  cookie.rs  errors.rs  executor.rs  headers.rs  lib.rs  login.rs
crates/dynamic-router/: Cargo.toml
crates/gateway-tests/: Cargo.toml
crates/gateway-tests/src/: lib.rs
crates/latency-router/: Cargo.toml
crates/mock-server/: Cargo.toml
crates/perplexity-web/: Cargo.toml
crates/perplexity-web/src/: constants.rs  errors.rs  lib.rs  login.rs  messages.rs  probe.rs
crates/upstream-emulator/: Cargo.toml
crates/upstream-emulator/src/: admin.rs  capability.rs  catalog.rs  config.rs  engine.rs  family.rs  lib.rs  main.rs  payload.rs  profiles.rs  router.rs  schema_fill.rs  state.rs  tier.rs  tokens.rs  welcome.rs  wire.rs
crates/upstream-emulator/tests/: http.rs
crates/web-browser-login/: Cargo.toml
crates/web-browser-login/src/: browser.rs  config.rs  lib.rs  options.rs  poll.rs  poll_storage.rs
crates/web-message-budget/: Cargo.toml
crates/web-message-budget/src/: chunk.rs  fit.rs  lib.rs  parse.rs  token.rs  types.rs
crates/web-structured-output/: Cargo.toml
crates/web-structured-output/src/: instruct.rs  lib.rs  parse.rs  retry.rs  validate.rs
crates/weighted-balance/: Cargo.toml
scripts/test/: Cargo.toml
scripts/test/src/: main.rs
(+623 files in other folders)
