[workspace]

members = [
    "crates/mock-server",
    "crates/telemetry",
    "crates/weighted-balance",
    "crates/dynamic-router",
    "crates/latency-router",
    "ai-gateway",
    "scripts/test",
    "scripts/trace-test-client",
]
resolver = "2"
default-members = ["ai-gateway"]

[workspace.package]
edition = "2024"
authors = [ "Thomas Harmon <tom@helicone.ai>, Justin Torre <justin@helicone.ai>, Kavin Desi Valli <kavin@helicone.ai>, Charlie Wu <charlie@helicone.ai>", "Helicone Developers" ]
license = "Apache-2.0"
publish = false
version = "0.2.0-beta.30"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = { level = "allow" }
missing_panics_doc = { level = "allow" }
struct_field_names = { level = "allow" }

[workspace.dependencies]
telemetry = { path = "./crates/telemetry" }
ai-gateway = { path = "./ai-gateway" }
weighted-balance = { path = "./crates/weighted-balance" }
dynamic-router = { path = "./crates/dynamic-router" }
latency-router = { path = "./crates/latency-router" }

anthropic-ai-sdk = { version = "0.2.27" }
anyhow = "1.0.102"
async-openai = { version = "0.36.1", features = ["full"] }
async-trait = "0.1.89"
axum = "0.8.9"
axum-core = "0.5.6"
aws-sdk-bedrockruntime = "1.130.0"
aws-smithy-types = { version = "1.4.7", features = ["serde-serialize", "serde-deserialize"] }
aws-types = "1.3.15"
aws-smithy-http = "0.63.6"
aws-sigv4 = "1.4.3"
aws-smithy-runtime-api = "1.12.0"
aws-credential-types = "1.2.14"
axum-server = "0.8.0"
backon = "1.6.0"
base64 = "0.22.1"
bytes = "1.11.1"
cache_control = "0.2.0"
cargo-husky = "1.5.0"
cfg-if = "1.0.4"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
compact_str = "0.9.0"
config = "0.15.22"
derive_more = { version = "2.1.1", features = ['as_ref', 'constructor', 'debug', 'deref', 'display', 'from', 'from_str', ] }
displaydoc = "0.2.5"
dotenvy = { version = "0.15.7" }
eventsource-stream = "0.2.3"
flate2 = "1.1.9"
futures = "0.3.32"
governor = "0.10.4"
heck = "0.5.0"
http = "1.4.0"
sha2 = "0.11.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
http-cache = { version = "0.21.0", features = ["manager-moka"], default-features = false }
http-cache-semantics = "2.1.0"
humantime-serde = "1.1.1"
hyper = { version = "1.9.0", features = ['full'] }
hyper-util = "0.1.20"
indexmap = "2.14.0"
infer = "0.19.0"
isocountry = "0.3.2"
jemallocator = "0.5.4"
json-patch = "4.1.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
meltdown = "0.3.2"
mime = "0.3.17"
moka = { version = "0.12.15", features = ["future"] }
nonempty-collections = "1.3.0"
openapiv3 = "2.2"
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version = "0.31.0" }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-stdout = { version = "0.31.0" }
opentelemetry-instrumentation-tower = "0.17.0"
opentelemetry-system-metrics = { version = "0.31.0" }
pin-project = "1.1.11"
pin-project-lite = "0.2.17"
pretty_assertions = "1.4.1"
r2d2 = "0.8.10"
rand = "0.9.1"
redis = { version = "0.32.4" }
regex = "1.11.1"
reqwest = { version = "0.12.21", features = ["json", "stream", "multipart", "native-tls", "charset", "gzip"], default-features = false }
reqwest-eventsource = "0.6.0"
rustls = { version = "0.23.39" }
rust_decimal = "1.41.0"
rustc-hash = "2.1.2"
rusty-s3 = "0.9.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_with = "3.18.0"
serde_yml = "0.0.12"
serial_test = "3.4.0"
strum = "0.28.0"
stubr = { git = "https://github.com/Helicone/stubr" }
sqlx = { version = "0.8.6" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ['full'] }
tokio-stream = "0.1.18"
tokio-test = "0.4.5"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls", "url"] }
tokio-util = "0.7.18"
tower = "0.5.3"
tower_governor = { version = "0.8.0", features = [] }
tower-http = { version = "0.6.8" }
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.23"
ts-rs = "12.0.1"
typed-builder = "0.23.2"
workspace_root = "0.2.0"
url = "2.5.8"
utoipa = "5.4.0"
uuid = { version = "1.23.1", features = ["serde", "v7"] }
