[package]
name = "ai-gateway"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/infostatart-dev/ai-gateway"
default-run = "ai-gateway"
description = "A high-performance LLM proxy router."
homepage = "https://github.com/infostatart-dev/ai-gateway"

[dependencies]
openrouter-rs = "0.9.0"
anthropic-ai-sdk = { workspace = true }
sha2 = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
axum-core = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls"] }
aws-sdk-bedrockruntime = { workspace = true }
aws-smithy-types = { workspace = true }
aws-sigv4 = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-credential-types = { workspace = true }
backon = { workspace = true, features = ['tokio-sleep'] }
base64 = { workspace = true }
bytes = { workspace = true, features = ['serde'] }
cache_control = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true, features = ['default', 'serde'] }
clap = { workspace = true }
compact_str = { workspace = true, features = ['serde'] }
config = { workspace = true }
derive_more = { workspace = true, features = ['as_ref', 'constructor', 'debug', 'deref', 'deref_mut', 'display', 'from', 'into', 'from_str'] }
displaydoc = { workspace = true }
dotenvy = { workspace = true }
dynamic-router = { workspace = true }
eventsource-stream = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
heck = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
http-cache = { workspace = true, features = ["manager-moka"] }
http-cache-semantics = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ['server-auto', 'server-graceful', 'tokio'] }
indexmap = { workspace = true, features = ['serde'] }
infer = { workspace = true }
isocountry = { workspace = true }
json-patch = { workspace = true }
latency-router = { workspace = true }
meltdown = { workspace = true }
mime = { workspace = true }
moka = { workspace = true }
nonempty-collections = { workspace = true, features = ["serde"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio", "testing"] }
opentelemetry-system-metrics = { workspace = true }
pin-project-lite = { workspace = true }
r2d2 = { workspace = true }
rand = { workspace = true }
redis = { workspace = true, features = ["tls-rustls", "r2d2", "tokio-rustls-comp", "tcp_nodelay", "tls-rustls-webpki-roots"] }
regex = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
rust_decimal = { workspace = true }
rustc-hash = { workspace = true }
rusty-s3 = { workspace = true }
serde = { workspace = true, features = ['derive', 'rc'] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
serde_yml = { workspace = true }
serial_test = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
stubr = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "tls-rustls", "chrono"] }
telemetry = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ['sync'] }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true, features = ['full'] }
tower_governor = { workspace = true, features = [] }
tower-http = { workspace = true, features = [ 'default', 'auth', 'catch-panic', 'add-extension', 'normalize-path', 'request-id', 'trace', 'util', 'sensitive-headers', 'compression-br', 'compression-deflate', 'compression-gzip', 'compression-zstd', 'decompression-br', 'decompression-deflate', 'decompression-gzip', 'decompression-zstd', 'cors' ] }
opentelemetry-instrumentation-tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ['env-filter', 'std'] }
typed-builder = { workspace = true }
url = { workspace = true, features = ['serde'] }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }
ts-rs = { workspace = true, features = ["uuid-impl"] }
weighted-balance = { workspace = true }
workspace_root = { workspace = true, optional = true }
chatgpt-web = { workspace = true }
deepseek-web = { workspace = true }
web-structured-output = { workspace = true }
perplexity-web = { workspace = true }
chromiumoxide = { workspace = true, optional = true }
tiktoken-rs = { version = "0.12.0", default-features = false }

[dev-dependencies]
cargo-husky = { workspace = true, features = ["user-hooks"] }
pretty_assertions = { workspace = true }
upstream-emulator = { path = "../crates/upstream-emulator" }

[features]
default = []
testing = ["dep:stubr", "dep:serial_test", "dep:workspace_root"]
redis-testing = []
chatgpt-login = ["dep:chromiumoxide", "chatgpt-web/login"]
deepseek-login = ["deepseek-web/login"]
perplexity-login = ["dep:chromiumoxide", "perplexity-web/login"]
web-login = ["chatgpt-login", "deepseek-login", "perplexity-login"]

[lints]
workspace = true

[[test]]
name = "auth"
required-features = ["testing"]

[[test]]
name = "single_provider"
required-features = ["testing"]

[[test]]
name = "load_balance"
required-features = ["testing"]

[[test]]
name = "logger"
required-features = ["testing"]

[[test]]
name = "weighted_balance"
required-features = ["testing"]

[[test]]
name = "health_monitor"
required-features = ["testing"]

[[test]]
name = "rate_limit"
required-features = ["testing"]

[[test]]
name = "rate_limit_combinations"
required-features = ["testing"]

[[test]]
name = "redis_rate_limit_combinations"
required-features = ["testing", "redis-testing"]

[[test]]
name = "rate_limit_monitor"
required-features = ["testing"]

[[test]]
name = "direct_proxy"
required-features = ["testing"]

[[test]]
name = "unified_api"
required-features = ["testing"]

[[test]]
name = "cache"
required-features = ["testing"]

[[test]]
name = "redis_cache"
required-features = ["testing", "redis-testing"]

[[test]]
name = "health_check"
required-features = ["testing"]

[[test]]
name = "error_format"
required-features = ["testing"]

[[test]]
name = "retries"
required-features = ["testing"]

[[test]]
name = "router_metrics"
required-features = ["testing"]

[[test]]
name = "provider_observability"
required-features = ["testing"]

[[test]]
name = "routing_load"
required-features = ["testing"]


# jemalloc does not build on Windows MSVC in CI; use the system allocator there.
[target.'cfg(not(windows))'.dependencies]
jemallocator = { workspace = true }
