[package]
name = "chatgpt-web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false
description = "ChatGPT web session client (chatgpt.com backend-api)"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
rand = { workspace = true }
regex = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonschema = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time", "rt"] }
uuid = { workspace = true, features = ["v4"] }
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
login = ["dep:chromiumoxide", "dep:futures"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }