[package]
name = "chatgpt-web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false
description = "ChatGPT web session client (chatgpt.com backend-api)"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
rand = { workspace = true }
regex = { workspace = true }
wreq = { workspace = true, features = ["cookies", "json", "stream"] }
wreq-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
web-message-budget = { workspace = true }
web-structured-output = { workspace = true }
jsonschema = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time", "rt"] }
web-browser-login = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
login = ["dep:chromiumoxide", "dep:futures"]

[dev-dependencies]
gateway-tests = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
wreq = { workspace = true, features = ["prefix-symbols"] }