[package]
name = "deepseek-web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false
description = "DeepSeek web session client (chat.deepseek.com)"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde", "clock"] }
hex = "0.4"
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
web-message-budget = { workspace = true }
web-structured-output = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true, features = ["v4"] }
web-browser-login = { workspace = true }
wreq = { workspace = true, features = ["cookies", "json", "stream"] }
wreq-util = { workspace = true }

[features]
default = []
login = []

[dev-dependencies]
gateway-tests = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serial_test = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
wreq = { workspace = true, features = ["prefix-symbols"] }
