[package]
name = "mock-server"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
ai-gateway = { workspace = true, features = ["testing"] }

axum = { workspace = true, features = ["ws"] }
clap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ['derive', 'rc'] }
serde_json = { workspace = true }
serde_yml = "0.0.12"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
gateway-tests = { workspace = true }
