[package]
name = "perplexity-web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = false
description = "Perplexity web session client (perplexity.ai SSE API)"

[dependencies]
chrono = { workspace = true, features = ["serde", "clock"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time", "rt"] }
web-browser-login = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wreq = { workspace = true, features = ["cookies", "json", "stream"] }
wreq-util = { workspace = true }
web-message-budget = { workspace = true }
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
login = ["dep:chromiumoxide", "dep:futures"]

[dev-dependencies]
gateway-tests = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dependencies]
wreq = { workspace = true, features = ["prefix-symbols"] }
