[package]
name = "upstream-emulator"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = false

[dependencies]
ai-gateway = { workspace = true }

axum = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_yml = { workspace = true }
url = { workspace = true }
web-structured-output = { workspace = true }
tiktoken-rs = { version = "0.12.0", default-features = false }

[dev-dependencies]
gateway-tests = { workspace = true }
reqwest = { workspace = true }

[[bin]]
name = "upstream-emulator"
path = "src/main.rs"

[lints]
workspace = true
