[package]
name = "weighted-balance"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
version = { workspace = true }
description = "Weighted load balancing algorithms for the LLM proxy router"
homepage = "https://github.com/infostatart-dev/ai-gateway"
publish = false

[dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
gateway-tests = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
