[package]
name = "test"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Test scripts for the LLM proxy router"
homepage = "https://github.com/infostatart-dev/ai-gateway"
publish = false

[dependencies]
async-openai = { workspace = true }
bytes = { workspace = true, features = ['serde'] }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
ai-gateway = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
